<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TtsCallResponder</string>

    <string name="title_activity_answered_call_list">Answered calls</string>
    <string name="title_activity_response_template_list">Response templates</string>
    <string name="title_activity_response_template_editor">Response template editor</string>
    <string name="title_activity_activity_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>

    <string name="label_title">Title:</string>
    <string name="label_text">Text:</string>
    <string name="label_calendar">Calendar:</string>
    <string name="label_current_response_template">Active:</string>
    <string name="label_current_event">Event:</string>
    <string name="label_current_event_end">ends at </string>
    <string name="label_undo">Undo</string>
    <string name="label_deleted">Items deleted.</string>

    <string name="label_placeholder_text">&quot;TODO&quot;</string>
    <string name="label_placeholder_text_long">&quot;Short version of a long bla blad blas blag blah blaj blak blal blaq blaw blae&quot;</string>

    <string name="description_call_back">Call back</string>
    <string name="label_placeholder_number">X</string>

    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_set_template_as_current">Set template as current</string>

    <string name="menu_item_test_settings">Test settings</string>
    <string name="menu_item_clear_list">Clear list</string>

    <string name="switch_auto_respond">Take calls:</string>

    <string name="hint_title">Enter a title here</string>
    <string name="hint_text">Type your response text here</string>

    <string name="header_main_response_templates">Response template list</string>
    <string name="header_main_autoresponder">Auto Responder</string>
    <string name="header_callers">Call list</string>

    <string-array name="slider_speech_rate_summaries">
        <item>Very slow</item>
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Very fast</item>
    </string-array>

    <string-array name="slider_pitch_summaries">
        <item>Very low</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very high</item>
    </string-array>
</resources>
