<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/list_bottom_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_main_small_spacing"
            android:layout_alignParentBottom="true"
            style="@style/UiItem" >
            <ImageButton
                android:id="@+id/button_deleteResponseTemplate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:visibility="gone"
                android:src="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/button_delete" />

            <ImageButton
                android:id="@+id/button_addResponseTemplate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:src="@android:drawable/ic_menu_add"
                android:contentDescription="@string/button_add" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_responseTemplates"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/TopLeftRightBorder"
            android:layout_above="@id/list_bottom_bar" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/undobar"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/activity_main_small_spacing"
        android:background="@drawable/home_screen_item" >

        <Button
            android:id="@+id/undobar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onUndoClick"
            android:drawableLeft="@android:drawable/ic_menu_revert"
            android:text="@string/label_undo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/undobar_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/undobar_button"
            android:layout_alignBaseline="@id/undobar_button"
            android:layout_marginLeft="@dimen/activity_main_small_spacing"
            android:gravity="center_vertical"
            android:text="@string/label_deleted"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</merge>